fix: add a flex-wrap to image-pair

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -184,6 +184,7 @@ table {
 .image-pair {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     max-width: 100%;
 }
